tests/snapshots/run_wpt_conformance__onnx_reduceLogSum_float16_1D_tensor_all_non-negative_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_log_sum.https.any.js",
    "reduceLogSum float16 1D tensor all non-negative default options",
    "onnx",
    "PASS",
)
